Bug 242545 - Ver.2.4.4: can't uncheck "Show Public Only"
Summary: Ver.2.4.4: can't uncheck "Show Public Only"
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-23 01:44 UTC by Kazuyoshi Furutaka
Modified: 2013-11-06 17:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kazuyoshi Furutaka 2010-06-23 01:44:31 UTC
Version:           unspecified (using KDE 4.4.4) 
OS:                Linux

Can't uncheck "Show Public Only" checkbox in the "Visibility" of the "Class settings" in "Umbrello setup".

Reproducible: Always

Steps to Reproduce:
0. (w/o any open project)
1. Select "Configure Umbrello UML modeler" from the "Settings" menu.
2. Open the "Class settings".
3. Uncheck "Show Public Only"
4. Press "OK"
5. Repeat 1. and 2. and you see the "Show Public Only" checkbox remains checked.

Actual Results:  
Can't show private attributes/operations by default.


OS: Linux (i686) release 2.6.33.5-124.fc13.i686.PAE
Compiler: gcc

Version 2.4.4 installed as a component of kdesdk-4.4.4-1.fc13.i686 of Fedora 13.
Comment 1 Oliver Kellogg 2012-02-14 23:07:24 UTC
SVN commit 1280148 by okellogg:

SettingsDlg::applyPage( item == pageClass ):
Add missing setting of m_pOptionState->classState.showPublicOnly.



 M  +2 -1      ChangeLog  
 M  +1 -0      umbrello/dialogs/settingsdlg.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1280148
Comment 2 Ralf Habacker 2013-11-06 17:24:23 UTC
set version-fixed-in from 4.8.1 changelog