SettingsDlg::applyPage( item == pageClass ): Add missing setting of m_pOptionState->classState.showPublicOnly.

BUG: 242545

svn path=/trunk/KDE/kdesdk/umbrello/; revision=1280148